Fixes the default rule being misaligned from the default select field option.

--- a/Source/Stylesheets/index.css
+++ b/Source/Stylesheets/index.css
@@ -4,3 +4,7 @@
   max-width: 600px;
   width: 100%;
 }
+
+.main-footer {
+  padding: 32px 0 16px 0;
+}
